# pytest-demo

./: .gitignore  .pre-commit-config.yaml  .zshrcexport  README.md  config.json  pyproject.toml
config/: json_import.py
schemas/: move_ailment_schema.json  move_schema.json
tests/moves/: test_move_ailments.py  test_moves.py
tests/pokemon/: test_abilities.py  test_types.py
