[tool.poetry]
name = "pytest-demo"
version = "0.1.0"
description = "Pytest demo repo, used to showcase pytest experience"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
requests = "^2.31.0"
pytest-sugar = "^0.9.7"
pytest-html = "^4.0.2"
jsonschema = "^4.19.1"
black = "^23.9.1"
pre-commit = "^3.4.0"

[tool.pytest]
testpaths = "tests"
markers = ["slow"]

[tool.pytest.plugins]
pytest-sugar = true
pytest-html = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
